完成了消息动效 更新了图标

--- a/res/style/echomoji.css
+++ b/res/style/echomoji.css
@@ -28,6 +28,7 @@ body {
     opacity: 1;
     transition: opacity .15s;
     font-weight: var(--moji-font-weight);
+    position: relative;
 }
 
 #messager.hide {
