新增变量占位字符串功能

--- a/res/style/echomoji.css
+++ b/res/style/echomoji.css
@@ -19,6 +19,7 @@ body {
     box-sizing: border-box;
     padding: 0 1.5em;
     background-color: var(--moji-background-color);
+    overflow: hidden;
 }
 
 #messager {
